_sass/base.scss
@font-face {
    font-family: 'STI';
    font-style: normal;
    font-weight: 100 900;
    src: url("/assets/fonts/sti.ttf") format("truetype");
}

* {
  color: inherit;
  margin: 0;
  padding: 0;
  font-family: inherit;
  font-size: inherit;
  font-style: inherit;
  font-weight: inherit;
  letter-spacing: inherit;
  line-height: inherit;
  text-decoration: none;
  text-decoration-thickness: 1px;
  text-underline-offset: 0.125em;
}

:root {
  --page: rgb(255,255,255);
  --gutter-x: 8vw;
  --gutter-y: 1.25rem;
  --color: rgb(0,0,0);
  --font-weight: 520;
  --color-faded: rgb(220,220,220);
  --hero-font-size: 12vw;
  --hero-font-weight: 480;
  --hero-letter-spacing: -0.06em;
  --hero-line-height: 0.66;
  --hero-color: color(display-p3 1 0.432 0.37 / 1);
  --blockquote-bg: rgba(126,126,126,0.1);
}

@media (prefers-color-scheme: dark) {
  :root {
    --page: rgb(0,0,0);
    --color: rgb(255,255,255);
    --color-faded: rgb(50,50,50);
    --font-weight: 440;
    --hero-font-weight: 430;
    --blockquote-bg: rgba(126,126,126,0.15);
  }
}

@media (max-width: 800px) {
  :root {
    --hero-letter-spacing: -0.04em;
  }
}

html {
  position: relative;
  width: 100vw;
  height: 100vh;
  overflow: hidden;
  color: var(--color);
  font-family: "STI", sans-serif;
  font-size: 14px;
  font-weight: var(--font-weight);
  letter-spacing: 0.01em;
  line-height: 1.2;
  -webkit-font-smoothing: antialiased;
}

body {
  position: absolute;
  top: 0;
  left: 0;
  box-sizing: border-box;
  width: 100vw;
  height: 100vh;
  overflow: scroll;
  scroll-snap-type: y proximity;
  display: flex;
  flex-direction: column;
  background: var(--page);
  scroll-behavior: smooth;
}

*::-webkit-scrollbar {
  display: none;
}

header {
  position: sticky;
  top: 0;
  padding: var(--gutter-y) var(--gutter-x);
  z-index: 100;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  // text-align: center;
  & > a {
    display: flex;
    flex-direction: column;
    &:hover,
    &:focus {
      & > span:first-child {
        text-decoration: underline;
      }
    }
  }
  span {
    font-size: 20px;
    line-height: 1.15;
    span {
      visibility: hidden;
    }
  }
}

body > section {
  position: relative;
  padding: calc(var(--hero-font-size) * 0.09) var(--gutter-x);
  scroll-snap-align: start;
  scroll-margin: calc(2.5em + 46px);
  color: var(--color-faded);
  transition: color 0.6s ease-out;
  @media (max-width: 600px) {
    padding: calc(var(--hero-font-size) * 0.125) var(--gutter-x);
  }
  &:last-of-type {
    margin-bottom: calc(100vh - 14vw);
  }
  summary {
    display: inline-block;
    font-size: var(--hero-font-size);
    font-weight: var(--hero-font-weight);
    letter-spacing: var(--hero-letter-spacing);
    line-height: var(--hero-line-height);
    text-indent: -0.075em;
    cursor: pointer;
    transition: color 0.6s ease-out;
    &:hover,
    &:focus {
      color: var(--color);
      outline: none;
    }
  }
  &.is-snapped {
    z-index: 20;
    color: var(--color);
    transition: 0.1s ease-out;
    strong {
      color: var(--hero-color);
      transition: color 0.6s ease-out;
    }
  }
  .detail {
    display: grid;
    grid-template-columns: 1fr 1fr;
    padding: 3vw 0 1rem;
    gap: 1rem;
    max-width: 55rem;
    text-wrap: pretty;
    @media (max-width: 960px) {
      max-width: 35rem;
      p {
        font-size: 11px;
      }
    }
    @media (max-width: 800px) {
      max-width: 90%;
    }
    @media (max-width: 600px) {
      div {
        grid-column: 1 / 3;
      }
    }
    h2 {
      font-size: 20px;
      line-height: 1.15;
      padding-bottom: 0.5rem;
    }
    div {
      position: relative;
    }
    div:nth-child(2) {
      h2 {
        padding-left: 2rem;
        &:before {
          content: "!";
          position: absolute;
          top: 0.1rem;
          left: 0;
          display: inline-flex;
          align-items: center;
          justify-content: center;
          width: 1.25rem;
          height: 1.25rem;
          font-size: 66%;
          font-weight: 700;
          border: 1.75px solid;
          border-radius: 10000px;
        }
      }
    }
  }
}

main {
  padding: var(--gutter-y) var(--gutter-x);
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  flex-grow: 2;
  gap: 3.5rem;
  h1 {
    width: 100%;
    font-size: var(--hero-font-size);
    font-weight: var(--hero-font-weight);
    letter-spacing: var(--hero-letter-spacing);
    line-height: var(--hero-line-height);
    text-indent: -0.075em;
    height: 33.33vh;
    strong {
      color: var(--hero-color);
    }
  }
  section {
    display: flex;
    flex-direction: row;
    gap: var(--gutter-y);
    max-width: 42rem;
    div {
      flex-grow: 2;
      h2 {
        font-size: 20px;
        line-height: 1.15;
        padding-bottom: 0.2rem;
      }
      p {
        hyphens: auto;
      }
    }
  }
  #content {
    display: flex;
    justify-content: start;
    align-items: start;
    flex-direction: column;
    gap: var(--gutter-y);
    padding-bottom: 25vh;
    font-weight: calc(var(--font-weight) *0.96);
    @media (max-width: 900px) {
      font-weight: var(--font-weight);
    }
    a {
      text-decoration: underline;
    }
    figure {
      display: flex;
      align-items: start;
      justify-content: start;
      flex-direction: column;
      gap: var(--gutter-y);
      padding: calc(var(--gutter-y)*3) 0;
      img {
        position: relative;
        left: -0.2em;
        display: block;
        width: 100%;
        height: auto;
        max-width: 90em;
        max-height: 38em;
        object-fit: contain;
      }
      figcaption {
        opacity: 40%;
      }
    }
    h2 {
      font-size: 1.8vw;
      line-height: 1.175;
      letter-spacing: -0.0075em;
      word-spacing: -0.01em;
      width: 50%;
      color: var(--hero-color);
      @media (max-width: 1400px) {
        font-size: 2vw;
      }
      @media (max-width: 1020px) {
        font-size: 2.3vw;
        width: 66.66%;
      }
      @media (max-width: 900px) {
        font-size: 20px;
        line-height: 1.15;
      }
      @media (max-width: 800px) {
        width: 100%;
      }
    }
    p {
      font-size: 1.8vw;
      line-height: 1.175;
      letter-spacing: -0.0075em;
      word-spacing: -0.01em;
      width: 50%;
      hyphens: auto;
      @media (max-width: 1400px) {
        font-size: 2vw;
      }
      @media (max-width: 1020px) {
        font-size: 2.3vw;
        width: 66.66%;
      }
      @media (max-width: 900px) {
        font-size: 20px;
        line-height: 1.15;
      }
      @media (max-width: 800px) {
        width: 100%;
      }
      @media (max-width: 520px) {
        font-size: 16px;
        line-height: 1.2;
      }
    }
    .comparison {
      display: flex;
      flex-direction: row;
      text-wrap: none;
      padding: calc(var(--gutter-y)*3) 0;
      gap: calc(var(--gutter-y) *2);
      @media (max-width: 760px) {
        flex-direction: column;
        padding: calc(var(--gutter-y)*3) 0;
        gap: calc(var(--gutter-y) * 0.5);
      }
      span {
        display: block;
        white-space: nowrap;
        &:first-child {
          text-indent: -0.4em;
        }
      }
      .bad {
        color: var(--hero-color);
      }
      div {
        position: relative;
        font-size: 200%;
        line-height: 44px;
        font-weight: 100;
        padding-right: calc(var(--gutter-y) *0.5);
        align-self: start;
        @media (max-width: 760px) {
          transform: rotate(90deg);
          padding-right: 0;
        }
      }
    }
    hr {
      display: block;
      width: 50%;
      margin: calc(var(--gutter-y)*6) 0;
      border: none;
      height: 0.5px;
      background: var(--color);
      font-size: 20px;
      opacity: 40%;
      @media (max-width: 1020px) {
        width: 66.66%;
      }
      @media (max-width: 800px) {
        width: 100%;
      }
    }
  }
}

nav {
  position: fixed;
  top: 0;
  right: var(--gutter-x);
  bottom: 0;
  overflow: scroll;
  z-index: 1000;
  scroll-behavior: smooth;
  @media (max-width: 800px) {
    display: none;
  }
  div {
    display: flex;
    flex-direction: column;
    align-items: start;
    gap: 0.25rem;
    padding: var(--gutter-y) 0 calc(var(--gutter-y) * 2);
  }
  a {
    color: var(--color-faded);
    font-size: 20px;
    line-height: 1.15;
    transition: 0.6s ease-out;
    &:hover,
    &:focus {
      color: var(--hero-color);
    }
    &.is-snapped {
      color: var(--hero-color);
    }
  }
}

#content-warning {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100dvh;
  box-sizing: border-box;
  z-index: 10000;
  background: transparent;
  backdrop-filter: blur(16px);
  padding: var(--gutter-y);
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-size: 19px;
  line-height: 1.15;
  font-weight: 440;
  &.is-visible {
    display: flex;
  }
  @media (max-width: 640px) {
    font-size: 14px;
  }
  div {
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    align-items: start;
    justify-content: center;
    padding: 0 var(--gutter-y);
    gap: 0.75em;
  }
  button {
    margin-top: 0.75em;
    box-sizing: border-box;
    width: 100%;
    max-width: 18em;
    border-radius: 10000px;
    background: var(--color);
    color: var(--page);
    border: none;
    height: 3em;
    padding-bottom: 1px;
    cursor: pointer;
    font-weight: 480;
  }
  p {
    box-sizing: border-box;
    max-width: 23em;
    text-wrap: pretty;
    &#cw-heading {
      font-size: 140%;
      font-weight: 480;
      letter-spacing: -0.01em;
      padding-bottom: 0.25em;
      span {
        visibility: hidden;
      }
    }    
  }
}

footer {
  position: sticky;
  box-sizing: border-box;
  bottom: 0;
  bottom: env(safe-area-inset-bottom);
  width: 100%;
  padding: 2.5em var(--gutter-x) calc(var(--gutter-y) * 2);
  margin-top: auto;
  z-index: 100;
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  align-items: center;
  gap: 0.66rem var(--gutter-y);
  font-size: 20px;
  line-height: 1.15;
  h3 {
    order: 1;
  }
  a:hover,
  a:focus {
    text-decoration: underline;
  }
  div:after {
    content: ".";
  }
}

